--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "license": "ISC",
     "devDependencies": {
         "css-loader": "^6.2.0",
+        "file-loader": "^6.2.0",
+        "html-loader": "^2.1.2",
         "html-webpack-plugin": "^5.3.2",
+        "mini-css-extract-plugin": "^2.2.2",
+        "optimize-css-assets-webpack-plugin": "^6.0.1",
         "style-loader": "^3.2.1",
         "webpack": "^5.52.0",
         "webpack-cli": "^4.8.0",
