--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
         "html-webpack-plugin": "^5.3.2",
         "mini-css-extract-plugin": "^2.2.2",
         "optimize-css-assets-webpack-plugin": "^6.0.1",
+        "postcss": "^8.3.6",
+        "postcss-loader": "^6.1.1",
+        "postcss-preset-env": "^6.7.0",
         "sass": "^1.39.0",
         "sass-loader": "^12.1.0",
         "terser-webpack-plugin": "^5.2.3",
