--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "devDependencies": {
         "@babel/core": "^7.15.5",
         "@babel/preset-env": "^7.15.4",
+        "@babel/preset-react": "^7.14.5",
         "babel-loader": "^8.2.2",
+        "babel-plugin-styled-components": "^1.13.2",
         "css-loader": "^6.2.0",
         "html-loader": "^2.1.2",
         "html-webpack-plugin": "^5.3.2",
@@ -20,6 +22,11 @@
         "webpack": "^5.52.0",
         "webpack-cli": "^4.8.0",
         "webpack-dev-server": "^4.1.1"
+    },
+    "dependencies": {
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "styled-components": "^5.3.1"
     },
     "scripts": {
         "start": "webpack serve --config webpack.config.js --open",
